--- a/simple_quarto_website/about.qmd
+++ b/simple_quarto_website/about.qmd
@@ -2,4 +2,11 @@
 title: "About"
 ---
 
-About this site
+# Style of play
+A versatile attacker, Ronaldo is capable of playing on either wing as well as through the centre of the pitch, and, while ostensibly right-footed, is very strong with both feet. Tactically, Ronaldo has undergone several evolutions throughout his career. While at Sporting and during his first season at Manchester United, he was typically deployed as a traditional winger on the right side of midfield, where he regularly looked to deliver crosses into the penalty area. In this position, he was able to use his pace and acceleration, agility and technical skills to take on opponents in one-on-one situations. Ronaldo became noted for his dribbling and flair, often displaying an array of tricks and feints, such as the step overs and so-called 'chops' that became his trademark; he has also been known to use the flip-flap.
+
+## International Youth Level
+Ronaldo began his international career with Portugal under-15 in 2001. During his international youth career, Ronaldo would represent the under-15, under-17, under-20, under-21 and under-23 national sides, amassing 34 youth caps and scoring 18 goals overall.
+
+Aged 18, Ronaldo made his first senior appearance for Portugal in a 1–0 win over Kazakhstan on 20 August 2003, coming on as a half-time substitute for Luís Figo. He was subsequently called up for UEFA Euro 2004, held in his home country, and scored his first international goal in a 2–1 group stage loss to eventual champions Greece, his eighth appearance for Portugal. After converting his penalty in a shoot-out against England in the quarter-finals, he helped Portugal reach the final by scoring the opening goal in a 2–1 win over the Netherlands. He was featured in the team of the tournament, having provided two assists in addition to his two goals.
+
